# xfpack

./: CMakeLists.txt  NOTICE  README.md
include/: xfpack.h
include/xfpack/: block_list.h  pack.h  strview.h  type.h  unpack.h
src/: CMakeLists.txt
src/pack/: block_list.cpp  block_pool.cpp  block_pool.h  coding.cpp  coding.h  common.h  pack.cpp  spinlock.h  strview.cpp  unpack.cpp  xfpack.cpp
tools/: CMakeLists.txt  example.cpp
